// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`W3NCreateInfo should match the snapshot for off-chain did 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      web3name
    </h1>
    <p
      class="subline"
    >
      Connect a web3name to your on-chain DID
    </p>
    <section>
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          KILT Identity 1
        </span>
      </div>
    </section>
    <p
      class="info"
    >
      Web3names are user-friendly names built on top of the KILT blockchain. With your on-chain DID, you can claim this alias which makes it easier for others to reference your identity, without the need to triple-check the DID’s long sequence of characters.
    </p>
    <p
      class="warning"
    >
      You need an on-chain DID to use this feature.
    </p>
    <p
      class="buttonsLine"
    >
      <button
        class="back"
        type="button"
      >
        Back
      </button>
      <a
        class="next"
        href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire/did/upgrade"
      >
        Upgrade to on-chain DID
      </a>
    </p>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </section>
</div>
`;

exports[`W3NCreateInfo should match the snapshot for on-chain did 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      web3name
    </h1>
    <p
      class="subline"
    >
      Connect a web3name to your on-chain DID
    </p>
    <section>
      <div
        class="avatar fullDid"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          KILT Identity 2
        </span>
      </div>
    </section>
    <p
      class="didLine"
    >
      <input
        aria-label="DID"
        class="long"
        readonly=""
        value="did:kilt:4pehddkhEanexVTTzWAtrrfo2R7xPnePpuiJLC7shQU894aY"
      />
      <button
        aria-label="copy to clipboard"
        class="copy"
        title="copy to clipboard"
        type="button"
      />
    </p>
    <p
      class="info"
    >
      Web3names are user-friendly names built on top of the KILT blockchain. With your on-chain DID, you can claim this alias which makes it easier for others to reference your identity, without the need to triple-check the DID’s long sequence of characters.
    </p>
    <p
      class="buttonsLine"
    >
      <button
        class="back"
        type="button"
      >
        Back
      </button>
      <a
        class="next"
        href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr/did/web3name/create/form"
      >
        Next Step
      </a>
    </p>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </section>
</div>
`;
